# gpu_ecc_alignment

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
ecc/: ecc_cuda.cpp  ecc_cuda.h  main.cpp
